2010-04-16  C.J. Adams-Collier	<cjac@colliertech.org>

	* mono-api-diff.cs: revived from the mono-2-2 branch and applied
	patch from debian package, noted that I'll handle maintenance
	
2010-02-10  Marek Habersack  <mhabersack@novell.com>

	* mono-api-info.cs: added support for extracting and generating
	TypeForwardedTo assembly attributes.

2009-06-03  Jb Evain  <jbevain@novell.com>

	* AssemblyResolver.cs: properly attach the resolver to the
	assemblies we've found.

2009-01-28  Jb Evain  <jbevain@novell.com>

	* AssemblyResolver.cs
	  Util.cs
	  mono-api-info.cs:
		Directly use the Resolve methods from Cecil.

2009-01-06  Jb Evain  <jbevain@novell.com>

	* transform.cs
	* cormissing.xsl
	* mono-api.xsl
	* mono-api-diff.cs:
		remove deprecated code.

2009-01-06  Jb Evain  <jbevain@novell.com>

	* Makefile: only build mono-api-info, as mono-api-diff and transform
	are not used anymore.

2009-01-05  Jb Evain  <jbevain@novell.com>

	* mono-api-info.cs: output custom attributes for generic parameters
	as well.

2009-01-05  Jb Evain  <jbevain@novell.com>

	* mono-api-info.cs: specify an `enumtype` attribute to describe
	enumeration underlyin types.

2009-01-05  Jb Evain  <jbevain@novell.com>

	* mono-api-info.cs: don't emit empty attributes on properties.

2008-12-17  Jb Evain  <jbevain@novell.com>

	* mono-api-info.cs: don't add Finalizers to the api definition.

2008-12-08  Jb Evain  <jbevain@novell.com>

	* Util.cs
	* WellFormedXmlWriter.cs
	* mono-api-diff.cs
	* AssemblyResolver.cs
	* mono-api-info.cs: normalize namespaces.

2008-12-08  Jb Evain  <jbevain@novell.com>

	* Metadata.cs
	* CecilMetadata.cs
	* CompareContext.cs
	* MasterMetadata.cs
	* Masterinfo.cs
	* Comparison.cs: add the gui-compare backend as source for now.

2008-12-04  Jb Evain  <jbevain@novell.com>

	* Remove CorCompare.exe sources.

2008-12-04  Jb Evain  <jbevain@novell.com>

	* Makefile: don't build CorCompare.exe anymore as it's not even
	used.

2008-12-04  Jb Evain  <jbevain@novell.com>
